fix overlapping sections

--- a/src/styles/form.scss
+++ b/src/styles/form.scss
@@ -30,7 +30,7 @@
   }
 
   .btn-primary {
-    z-index: 1;
+    z-index: 10;
 
     &:disabled {
       opacity: 0.5;
