--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,52 +1,42 @@
 @font-face {
   font-family: FontBold;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Bold.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Bold.otf") format("opentype");
 }
 @font-face {
   font-family: FontBoldItalic;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-BoldItalic.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-BoldItalic.otf") format("opentype");
 }
 @font-face {
   font-family: FontBook;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Book.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Book.otf") format("opentype");
 }
 @font-face {
   font-family: FontBookItalic;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-BookItalic.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-BookItalic.otf") format("opentype");
 }
 @font-face {
   font-family: FontLight;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Light.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Light.otf") format("opentype");
 }
 @font-face {
   font-family: FontLightItalic;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-LightItalic.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-LightItalic.otf") format("opentype");
 }
 @font-face {
   font-family: FontMedium;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Medium.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Medium.otf") format("opentype");
 }
 @font-face {
   font-family: FontMediumItalic;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-MediumItalic.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-MediumItalic.otf") format("opentype");
 }
 @font-face {
   font-family: FontRegular;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Regular.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-Regular.otf") format("opentype");
 }
 @font-face {
   font-family: FontRegularItalic;
-  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-RegularItalic.otf")
-    format("opentype");
+  src: url("../assets/fonts/ABCFavoritEdu/ABCFavoritEdu-RegularItalic.otf") format("opentype");
 }
 @font-face {
   font-family: FontBigCaslon;
@@ -87,7 +77,7 @@ $secondary-font-color: #ffffff;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: 2;
+  z-index: 20;
   background-color: white;
   border: 3px solid $primary-background-color;
   border-radius: 5px;
@@ -116,19 +106,13 @@ $secondary-font-color: #ffffff;
   @include breakpoint(xlarge) {
     padding: 60px 300px;
   }
-  background-image: linear-gradient(
-    $secondary-background-color,
-    $primary-background-color
-  );
+  background-image: linear-gradient($secondary-background-color, $primary-background-color);
 
   color: $secondary-font-color;
   text-align: left;
 
   &.flipped {
-    background-image: linear-gradient(
-      $primary-background-color,
-      $secondary-background-color
-    );
+    background-image: linear-gradient($primary-background-color, $secondary-background-color);
   }
 }
 
